apps/base/network/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns
  namespace: network
spec:
  selector:
    app: blocky
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
