apps/base/network/blocky/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: blocky-dns-tcp
  namespace: network
spec:
  entryPoints:
    - dns-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: blocky-dns
          port: 53
